# simple_authentitcation-fastAPi

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
fastapi_app/: main.py
src/: main.py
src/api/v1/: user_routes.py
src/db/: db.py
src/models/: user_model.py
src/routes/: auth_routes.py
src/schemas/: user_schema.py
src/services/: auth_service.py
src/utils/: env_loader.py  password_hashed.py
