[tool.poetry]
name = "simple-auth"
version = "0.1.0"
description = "simple authentication backend practice"
authors = ["pharmakarios1 <akhigbeblessed@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
fastapi = "^0.116.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
